extracttext-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extracttext-service-deployment
  namespace: intelligtest-namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app/component: extracttext-service
  template:
    metadata:
      name: extracttext-service-pod
      labels:
        app/name: extracttext-service-pod
        app/component: extracttext-service
    spec:
      containers:
        - name: extracttext-service-container
          image: zaragozasebastian/extracttext-service-intelligtest:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 5000
